--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,15 @@
 {
-    "version" : 2,
-    "name" : "Full Stack",
-    "builds" : [
-        {
-            "src" : "./server.js",
-            "use" : "@vercel/node"
-        }
+    "builds": [
+      {
+        "src": "./server.js",
+        "use": "@vercel/node"
+      }
     ],
-    "routes" : [
-        {
-            "src" : "/(.*)",
-            "dest" : "/"
-        }
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/server.js"
+      }
     ]
-}
+  }
+  
