--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.6",
+    "caniuse-lite": "^1.0.30001720",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemailer": "^6.7.5",
@@ -15,6 +16,8 @@
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
@@ -22,6 +25,8 @@
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
+    "styled-components": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
